cmake_minimum_required(VERSION 3.15)
project(ShengYiWuSystem)
add_executable(ShengYiWuSystem main.cpp shengyiwu.h shengyiwu.cpp shengzhihua.h shengzhihua.cpp sizhiyu.h sizhiyu.cpp shizhisha.h shizhisha.cpp kongzhibei.h kongzhibei.cpp lizhiguan.h lizhiguan.cpp wujiantao.h wujiantao.cpp pingfensystem.h pingfensystem.cpp)